[package]
name = "rust_musicplayer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
cpal = "0.15"
lofty = "0.19"
rustfft = "6.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
